[package]
name = "bg-maker"
version = "0.0.1"
edition = "2024"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = [ "Win32_System_Com", "Win32_UI_Shell" ] }

[dependencies]
tokio = "1"
image = { version= "0.25.6", features = [ "png" ] }
iced = { git = "https://github.com/iced-rs/iced.git", features = [ "canvas", "image", "advanced", "tokio" ], branch = "master" }
iced_runtime = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
windows = { version = "0.61.1", features = [ "Win32_System_Com", "Win32_UI_Shell" ] }
rfd = "0.15.3"
chrono = "0.4.40"
